tests/snapshots/mermaid_seq_render__notes@120.snap
---
source: tests/mermaid_seq_render.rs
expression: canvas.plain_text()
---
      ╭───╮  ╭───╮      ╭───╮                                                                                           
      │ A │  │ B │      │ C │                                                                                           
      ╰───╯  ╰───╯      ╰───╯                                                                                           
        ┆      ┆          ┆                                                                                             
╭─────╮ ┆      ┆          ┆                                                                                             
│ pre │ ┆      ┆          ┆                                                                                             
╰─────╯ ┆      ┆          ┆                                                                                             
        ┆  go  ┆          ┆                                                                                             
        ┆──────▶          ┆                                                                                             
        ┆      ┆ ╭──────╮ ┆                                                                                             
        ┆      ┆ │ busy │ ┆                                                                                             
        ┆      ┆ ╰──────╯ ┆                                                                                             
       ╭───────────────────╮                                                                                            
       │ over all          │                                                                                            
       │ three             │                                                                                            
       ╰───────────────────╯                                                                                            
        ┆      ┆          ┆ ╭─────╮                                                                                     
        ┆      ┆          ┆ │ end │                                                                                     
        ┆      ┆          ┆ ╰─────╯                                                                                     
        ┆      ┆   done   ┆                                                                                             
        ┆      ┆──────────▶                                                                                             
        ┆      ┆          ┆                                                                                             
      ╭───╮  ╭───╮      ╭───╮                                                                                           
      │ A │  │ B │      │ C │                                                                                           
      ╰───╯  ╰───╯      ╰───╯
