tests/snapshots/mermaid_seq_render__one_participant@40.snap
---
source: tests/mermaid_seq_render.rs
expression: canvas.plain_text()
---
 ╭───────╮                              
 │ Solo  │                              
 ╰───────╯                              
     ┆                                  
     ┆──╮                               
     ┆  │ muse                          
     ┆◀─╯                               
 ╭───────╮                              
 │ alone │                              
 ╰───────╯                              
     ┆                                  
 ╭───────╮                              
 │ Solo  │                              
 ╰───────╯
