tests/snapshots/mermaid_seq_render__self_messages@40.snap
---
source: tests/mermaid_seq_render.rs
expression: canvas.plain_text()
---
     ╭───╮       ╭───╮                  
     │ A │       │ B │                  
     ╰───╯       ╰───╯                  
       ┆           ┆                    
       ┆──╮        ┆                    
       ┆  │ think  ┆                    
       ┆◀─╯        ┆                    
       ┆    ask    ┆                    
       ┆───────────▶                    
       ┆           ┆──╮                 
       ┆           ┆  │ look it up      
       ┆           ┆◀─╯                 
       ┆  answer   ┆                    
       ◀───────────┆                    
       ┆           ┆                    
     ╭───╮       ╭───╮                  
     │ A │       │ B │                  
     ╰───╯       ╰───╯
