tests/snapshots/mermaid_seq_render__self_messages@80.snap
---
source: tests/mermaid_seq_render.rs
expression: canvas.plain_text()
---
                         ╭───╮       ╭───╮                                      
                         │ A │       │ B │                                      
                         ╰───╯       ╰───╯                                      
                           ┆           ┆                                        
                           ┆──╮        ┆                                        
                           ┆  │ think  ┆                                        
                           ┆◀─╯        ┆                                        
                           ┆    ask    ┆                                        
                           ┆───────────▶                                        
                           ┆           ┆──╮                                     
                           ┆           ┆  │ look it up                          
                           ┆           ┆◀─╯                                     
                           ┆  answer   ┆                                        
                           ◀───────────┆                                        
                           ┆           ┆                                        
                         ╭───╮       ╭───╮                                      
                         │ A │       │ B │                                      
                         ╰───╯       ╰───╯
